--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -717,7 +717,7 @@ body {
     top: -30px;
     right: -10px;
     width: 150px;
-    background-color: #2869ff;
+    background-color: #2c394f;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     z-index: 1;
     padding: 5px 0;
@@ -897,3 +897,4 @@ legend {
         height: 41rem;
     }
 }
+
